--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,16 @@
 <html>
-  <head>
-    <title>My app</title>
-  </head>
-  <body>
-    <my-app>Loading...</my-app>
-  </body>
+	<head>
+		<title>My app</title>
+		<meta content="ie=edge" http-equiv="x-ua-compatible" />
+		<meta charset="utf-8" content="Patient Registration and Enrollment System" name="description" />
+		<base href="/" />
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
+		<link href="https://fonts.gstatic.com" rel="preconnect" />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+		<meta content="#1976d2" name="theme-color" />
+	</head>
+	<body>
+		<my-app>Loading...</my-app>
+	</body>
 </html>
